Fix: Styling - ensure that header has a higher z-index than the rest of the body

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ header {
 	-moz-box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.75);
 	position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 h2 {
